<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_whole_bg"
    tools:context="com.yah.manager.teachingmanage.Activity.LoginActivity">
    <ImageView
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"
        android:layout_width="100dp"
        android:layout_height="100dp" />
    <LinearLayout
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/main_text_size"
                android:text="@string/login_username"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="4"
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textSize="@dimen/main_text_size"
                android:textColor="@color/login_edit_text_color"
                android:background="@drawable/login_et_bg"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/main_text_size"
                android:text="@string/login_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="4"
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textSize="@dimen/main_text_size"
                android:textColor="@color/login_edit_text_color"
                android:background="@drawable/login_et_bg"
                android:inputType="textPassword"
                />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_login"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_btn_bg"
            android:textColor="@color/white"
            android:text="@string/login"
            android:layout_width="80dp"
            android:layout_height="40dp" />
        <Button
            android:id="@+id/btn_register"
            android:background="@drawable/login_btn_bg"
            android:textColor="@color/white"
            android:text="@string/register"
            android:layout_width="80dp"
            android:layout_height="40dp" />
    </LinearLayout>
</LinearLayout>
