<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yah.manager.teachingmanage.Activity.MainActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

    </FrameLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height">
        <LinearLayout
            android:id="@+id/ll_course"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_course"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_course_press"
                android:layout_width="@dimen/bottom_bar_iv_size"
                android:layout_height="@dimen/bottom_bar_iv_size" />
            <TextView
                android:id="@+id/tv_course"
                android:layout_gravity="center_horizontal"
                android:text="@string/btm_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTitlebar"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_test"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_test"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_test_normal"
                android:layout_width="@dimen/bottom_bar_iv_size"
                android:layout_height="@dimen/bottom_bar_iv_size" />
            <TextView
                android:id="@+id/tv_test"
                android:layout_gravity="center_horizontal"
                android:text="@string/btm_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_normal"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_chat"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_chat"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_chat_normal"
                android:layout_width="@dimen/bottom_bar_iv_size"
                android:layout_height="@dimen/bottom_bar_iv_size" />
            <TextView
                android:id="@+id/tv_chat"
                android:layout_gravity="center_horizontal"
                android:text="@string/btm_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_normal"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
